--- a/package.json
+++ b/package.json
@@ -12,11 +12,17 @@
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.27.10",
+    "compress-images": "^2.0.5",
+    "gifsicle": "^5.3.0",
     "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^8.0.0",
+    "gulp-clean": "^0.4.0",
+    "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
-    "gulp-uglify-es": "^3.0.0"
+    "gulp-sass": "^5.1.0",
+    "gulp-uglify-es": "^3.0.0",
+    "pngquant-bin": "^6.0.0",
+    "sass": "^1.54.8"
   },
-  "dependencies": {
-    "gulp-sass": "^5.1.0"
-  }
+  "dependencies": {}
 }
